--- a/Introduction.ipynb
+++ b/Introduction.ipynb
@@ -6,6 +6,13 @@
    "source": [
     "# Galaxies"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "topics go here"
+   ]
   }
  ],
  "metadata": {
