--- a/Installation.ipynb
+++ b/Installation.ipynb
@@ -4,35 +4,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Galaxies"
+    "# Installation notes"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "topics go here"
+    "The following modules need to be installed:\n",
+    "\n",
+    "```\n",
+    "ipympl\n",
+    "```"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "4"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "2+2"
-   ]
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
