Added SFPS stuff

--- a/Plotting.ipynb
+++ b/Plotting.ipynb
@@ -10,7 +10,7 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
-    "import math \n",
+    "import math\n",
     "\n",
     "plt.rcParams['figure.dpi']= 100.0\n",
     "plt.style.use('sm.mplstyle')\n",
@@ -20,15 +20,6 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = pd.read_csv(\"https://raw.githubusercontent.com/plotly/datasets/master/tips.csv\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -194,18 +185,19 @@
        "[244 rows x 7 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "df = pd.read_csv(\"https://raw.githubusercontent.com/plotly/datasets/master/tips.csv\")\n",
     "df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -228,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
