--- a/Plotting.ipynb
+++ b/Plotting.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -185,7 +185,7 @@
        "[244 rows x 7 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -214,8 +214,7 @@
    "source": [
     "plt.scatter('total_bill','tip',data=df)\n",
     "plt.xlabel('Total Bill')\n",
-    "plt.ylabel('Tip')\n",
-    "plt.show()"
+    "plt.ylabel('Tip');"
    ]
   },
   {
