Tweaks to plot things nicely

--- a/FSPS.ipynb
+++ b/FSPS.ipynb
@@ -1,6 +1,31 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# FSPS Examples for AST2040"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Documentation for the Python FSPS bindings is here: \n",
+    "\n",
+    "http://dfm.io/python-fsps/current/stellarpop_api/#api-reference\n",
+    "\n",
+    "To use the Python bindings you first need to install Charlie Conroy's Flexible Stellar Population Synthsis (FSPS) Fortran code, which you can find here:\n",
+    "\n",
+    "https://github.com/cconroy20/fsps\n",
+    "\n",
+    "These are the papers which describe FSPS:\n",
+    "\n",
+    "- Conroy, Gunn, & White 2009, ApJ, 699, 486\n",
+    "- Conroy & Gunn 2010, ApJ, 712, 833"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 18,
    "metadata": {},
