--- a/FSPS.ipynb
+++ b/FSPS.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,8 +52,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 27 s, sys: 922 ms, total: 27.9 s\n",
-      "Wall time: 27.6 s\n"
+      "CPU times: user 25.9 s, sys: 783 ms, total: 26.6 s\n",
+      "Wall time: 26.4 s\n"
      ]
     }
    ],
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 3,
    "metadata": {
     "scrolled": true
    },
@@ -75,8 +75,8 @@
      "output_type": "stream",
      "text": [
       "['sdss_u', 'sdss_g', 'sdss_r', 'sdss_i', 'sdss_z']\n",
-      "CPU times: user 171 µs, sys: 9 µs, total: 180 µs\n",
-      "Wall time: 172 µs\n"
+      "CPU times: user 253 µs, sys: 0 ns, total: 253 µs\n",
+      "Wall time: 237 µs\n"
      ]
     }
    ],
@@ -104,8 +104,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 2min 14s, sys: 701 ms, total: 2min 15s\n",
-      "Wall time: 2min 14s\n"
+      "CPU times: user 2min 6s, sys: 642 ms, total: 2min 6s\n",
+      "Wall time: 2min 5s\n"
      ]
     }
    ],
@@ -123,15 +123,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 24 ms, sys: 12 ms, total: 36 ms\n",
-      "Wall time: 35.5 ms\n"
+      "CPU times: user 33.9 ms, sys: 4.04 ms, total: 37.9 ms\n",
+      "Wall time: 37.6 ms\n"
      ]
     },
     {
@@ -140,7 +140,7 @@
        "array([57.92702758, 54.55491742, 52.0338802 , 50.91737216, 49.84241311])"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -176,8 +176,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 676 ms, sys: 6.98 ms, total: 683 ms\n",
-      "Wall time: 681 ms\n"
+      "CPU times: user 581 ms, sys: 47.8 ms, total: 629 ms\n",
+      "Wall time: 626 ms\n"
      ]
     }
    ],
