--- a/FSPS.ipynb
+++ b/FSPS.ipynb
@@ -252,15 +252,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from astropy.cosmology import WMAP9 as cosmo"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -287,6 +278,8 @@
     }
    ],
    "source": [
+    "from astropy.cosmology import WMAP9 as cosmo\n",
+    "\n",
     "age_of_universe_when_galaxy_was_born = cosmo.age(5)\n",
     "age_of_universe_when_galaxy_was_born"
    ]
@@ -295,7 +288,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "So now let's get the age of the galaxy at various redshifts:"
+    "To get the age of the galaxy, we just just get the age of the Universe at a given redshift and subtract off the time at which the galaxy was born. "
    ]
   },
   {
@@ -435,11 +428,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Question for you: this is only \"sort-of\" self-consistent. What corners did we cut?"
+   ]
   }
  ],
  "metadata": {
